<resources>
    <string name="app_name">Visualize</string>

    <string name="action_settings">Settings</string>

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->
    <!-- Label for the show bass checkbox preference -->
    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>


    <string name="pref_show_mid_range_label">Show Mid Range</string>
    <string name="pref_show_mid_range_key" translatable="false">show_mid_range</string>


    <string name="pref_show_treble_label">Show Treble</string>
    <string name="pref_show_treble_key" translatable="false">show_treble</string>


    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>


    <string name="pref_colorlist_title">Shape Color</string>
    <string name="pref_colorlist_key" translatable="false">colorlist</string>

    <string name="pref_colorlist_entry_red">Red</string>
    <string name="pref_colorlist_entry_green">Green</string>
    <string name="pref_colorlist_entry_blue">Blue</string>

    <string name="pref_colorlist_value_red">@string/pref_color_red_value</string>
    <string name="pref_colorlist_value_green">@string/pref_color_green_value</string>
    <string name="pref_colorlist_value_blue">@string/pref_color_blue_value</string>



    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>
</resources>
